
	* common.h: definition of COB_A_NORETURN for newer HPUX (__HP_cc)

2019-12-27  Ron Norman <rjn@inglenet.com>

	* common.h: added cob_file.curkey to record recent file index
	* fileio.c: cob_read_next will check for records returned with
	  a key that has all SUPPRESS character and skip the record.
	  This will handle old VBISAM which do not support key suppression.

2019-11-18  Ron Norman <rjn@inglenet.com>

	* common.h, fileio.c (fextfh.c, fbdb.c): Updates to support 
	   SET ... TO ADDRESS OF FH--FCD OF file     and
	   SET ... TO ADDRESS OF FH--KEYDEF OF file

2019-10-25  Edward Hart <edward.dan.hart@gmail.com>

	* numeric.c (cob_add_int): fixed floating-point case (bug #603)

2019-10-19  Ron Norman <rjn@inglenet.com>

	* fisam.c->fileio.c (indexed_read_next): correction for START LESS EQUAL
	  followed by READ PREVIOUS
	* fbdb.c->fileio.c (indexed_open) [WITH_DB]: correction to not return 05
	  status when OPEN OUTPUT for an optional file

2019-10-15  Simon Sobisch <simonsobisch@gnu.org>

	* screenio.c (pass_cursor_to_program): fixed return column being off by -1
	* screenio.c (get_cursor_from_program): fixed alphanumeric CURSOR to only
	  work for size 6

2019-10-01  Edward Hart <edward.dan.hart@gmail.com>

	* fileio.c: fixed location of definition of off_t (bug #596)

2019-09-23  Simon Sobisch <simonsobisch@gnu.org>

	* common.h: moved alignment defines to cobc/cobc.h

2019-09-03  Ron Norman <rjn@inglenet.com>

	* call.c: Initialize valid_char when needed
	* numeric.c: Correct the definition of 'isinf'

2019-09-20  Ron Norman <rjn@inglenet.com>

	* reportio.c: Table up report for cleanup in cob_exit_reportio

2019-08-25  Simon Sobisch <simonsobisch@gnu.org>

	* fileio.c [WITH_DB]: minor refactoring - limit scope of some variables,
	  extracted (set_dbt) from (lock_record, test_record_lock)

2019-08-17  Simon Sobisch <simonsobisch@gnu.org>

	* call.c (cob_resolve_internal): refactored to keep call_entry_buff